--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,41 @@
   Author: Sam Norton
   
 **********************************************************************************/
-
+@font-face {
+    font-family: 'Product Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  }
 
 body {
-    background:#27ae60;
     text-align:center;
     font-family:'Product Sans';
     color: #fff;
+    text-shadow: 2px 2px 4px #000000; 
+    overflow: hidden;
+    
 }
-
+@keyframes fade {
+    0%,100% { opacity: 0 }
+    50% { opacity: 1 }
+  }
+.bg{   
+    transform: scale(1.1); 
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;    
+    background: url('../images/bg1.jpg') no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    filter: blur(3px);
+}
 .container {
-    margin:70px auto
+    margin:70px auto;
+        
 }
 
 h1 {
@@ -24,7 +48,8 @@ h1 {
     font-family:'Product Sans';
     color:#fff;
     font-weight:800;
-    font-size:50px
+    font-size:50px;
+    filter: blur(0px);
 }
 
 h3 {
@@ -63,7 +88,8 @@ button#load {
     text-align:center;
     cursor:pointer;
     margin:15px auto;
-    display:block
+    display:block;
+    filter: blur(0px);
 }
 
 #loader-img {
@@ -76,8 +102,8 @@ button#load {
     padding:3em;
     text-align:center;
     color:#fff;
-    font-family:'Product Sans';
     font-size:18px;
     font-weight:600;
     height:289px;
+    filter: blur(0px);
 }
